[package]
name = "app-io"
version = "0.1.0"
edition = "2021"

[dependencies]
gmeta = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
gstd = { git = "https://github.com/gear-tech/gear.git", branch = "stable" }
scale-info = { version = "2", default-features = false }
#parity-scale-codec = { version = "3", default-features = false }
primitive-types = { version = "0.12.1", default-features = false, features = ["scale-info"] }
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false }

nft-io = { git = "https://github.com/gear-dapps/non-fungible-token.git", tag = "0.2.7" }
#nft-marketplace = { git = "https://github.com/gear-dapps/nft-marketplace.git", branch = "feat/metawasm-state" }